<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/disp_ndc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:height="50dp"
        android:text="@string/disp_ndc"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp" >

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disp_title1_3"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disp_title2_4"
            android:textColor="@android:color/holo_green_light"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disp_title1_3"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disp_title2_4"
            android:textColor="@android:color/holo_green_light"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/title5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disp_title5"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="35sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/topImage"
        android:layout_width="fill_parent"
        android:layout_height="307dp"
        android:contentDescription="画像がありません"
        android:scaleType="fitXY"
        android:src="@drawable/top_image" />
   
    <TextView
        android:id="@+id/disp_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:height="70dp"
        android:text="@string/disp_msg"
        android:textSize="20sp" />
    
    <View
        android:id="@+id/testAnime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>
